labs/lab2/testsuite/good/subtyping/cmp_if_int_gt_double.cc
int main () {
	if (5 > 3.0)
		int y;
	else {}
	return 0;
}
